# hypermodern_projectstructure

./: .flake8  .gitignore  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/pyrepl/: __init__.py
tests/: __init__.py  test_version.py
