[tool.poetry]
name = "hypermodern_projectstructure"
version = "0.1.0"
description = "hypermodern_projectstructure"
authors = ["mindcrackx <m.plaumann@protonmail.com>"]
keywords = ["hypermodern_projectstructure"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.17"
httpx = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"

# tooling configuration:
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.770"
typeguard = "^2.7.1"
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.3.0"
xdoctest = "^0.12.0"
sphinx = "^3.0.4"
sphinx-autodoc-typehints = "^1.10.3"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_projectstructure"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
